Use regular vh to prevent flickering

--- a/client/src/assets/stylus/views/loading-page.styl
+++ b/client/src/assets/stylus/views/loading-page.styl
@@ -16,7 +16,7 @@ animation()
 
 .loading-page-container
   width: 100%
-  height: calc(var(--vh, 1vh) * 100)
+  height: 90vh
   color: $white
   display: flex
   flex-direction: column
